<resources>
    <string name="app_name">HouseHunter</string>
    <string name="title_activity_main">House Hunter</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_password">password</string>
    <string name="action_sign_in_short">Enregistrement</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mot de passe trop court, minimum 6 caracteres!</string>
    <string name="auth_failed">Authnetification échouée, vérifiez vos identifiants ou inscrivez-vous</string>
    <string name="change_email">Changer Email</string>
    <string name="change_password">Changer mot de passe</string>
    <string name="send_password_reset_email">Envoyer email de changement</string>
    <string name="remove_user">SUpprimer utilisateur</string>
    <string name="new_pass">Nouveau mot de passe</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Se connecter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Nom complet</string>
    <string name="btn_login">SE CONNECTER</string>
    <string name="btn_link_to_register">Pas encore membre ? Inscrivez-vous!</string>
    <string name="btn_link_to_login">Déjà enregistré? COnnectez-vous!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Mot de passe oublié?</string>
    <string name="btn_reset_password">Changer Password</string>
    <string name="btn_back"><![CDATA[<< Retour]]></string>
    <string name="hint_new_email">Nouvel Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Envoi</string>
    <string name="btn_remove">Suppression</string>
    <string name="btn_sign_out">Se déconnecter</string>
    <string name="lbl_forgot_password">Mot de passe oublié?</string>
    <string name="forgot_password_msg">TEST.</string>

    <string name="rechercher_lieu">Rechercher</string>
    <string name="loc">Par loc</string>
    <string name="profil">Profil</string>
</resources>
